--- a/main.html
+++ b/main.html
@@ -9,9 +9,9 @@
 <body>
 <nav>
 	<ul>
-		<li><a href=" http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3">Audio1</a></li>
-	<li><a href=" http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg">audio2</a></li>
-<li><a href="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3">Audio3</a></li>	
+		<li><a href="https://www.google.co.in/">Google</a></li>
+		<li><a href="https://www.facebook.com/login/?next=https%3A%2F%2Fwww.facebook.com%2F">Facebook</a></li>
+        <li><a href="https://www.instagram.com/">Instagram</a></li>
 	</ul>
 	
 </nav>
