--- a/main.html
+++ b/main.html
@@ -15,13 +15,19 @@
 	</ul>
 	
 </nav>
-	<h1>3 random audios</h1>
+	<header>3 random audios</header>
+	<section>
 <Audio controls>
 	<source src=" http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mp3">
-	<source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
-	<source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mp3">
-</Audio>
-
+	</Audio>
+		<audio controls>
+			<source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
+	</audio>
+		<audio controls>
+			<source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mp3">
+		
+		</audio>
+	</section>
 
 
 
