--- a/main.html
+++ b/main.html
@@ -15,8 +15,11 @@
 	</ul>
 	
 </nav>
-	<header>3 random audios</header>
+	
+	
 	<section>
+	<h1>3 random audios</h1>
+	
 <Audio controls>
 	<source src=" http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mp3">
 	</Audio>
