--- a/main.html
+++ b/main.html
@@ -16,9 +16,8 @@
 	
 </nav>
 	
-	
-	<section>
-	<h1>3 random audios</h1>
+
+	<header>3 random audios</header>
 	
 <Audio controls>
 	<source src=" http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mp3">
@@ -30,7 +29,7 @@
 			<source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mp3">
 		
 		</audio>
-	</section>
+	
 
 
 
